<resources>
    <string name="app_name">Map Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Side bar</string>
    <string name="drawer_close"></string>
    <string name="title_activity_login">Sign in</string>

    <!-- logging screen -->

    <string name="hint_pass">password</string>
    <string name="hint_email">email</string>

    <!-- register screen -->
    <string name="hint_name">name</string>
    <string name="hint_surname">surname</string>
    <string name="hit_username">username</string>

</resources>
